--- a/history_ui/faq.html
+++ b/history_ui/faq.html
@@ -4,7 +4,7 @@
   <meta name="viewport" content="width=device-width,initial-scale=1.0">
   <link rel="shortcut icon" href="../icons/favicon.ico" type="image/x-icon">
   <link rel="icon" href="../icons/favicon.ico" type="image/x-icon">
-  <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+  <link href="css/materialicons.css" rel="stylesheet">
   <title>Historify</title>
   <style>
     @media (max-width: 1150px) {
@@ -161,6 +161,13 @@
       width: 100%;
       margin-top: 0;
       margin-bottom: 18px;
+    }
+
+    @media (max-width: 466px) {
+      .container {
+        margin-left: 20px;
+        margin-right: 20px;
+      }
     }
   </style>
 </head>
