Move inline CSS to external stylesheets

--- a/history_ui/index.html
+++ b/history_ui/index.html
@@ -5,329 +5,9 @@
   <link rel="shortcut icon" href="../icons/favicon.ico" type="image/x-icon">
   <link rel="icon" href="../icons/favicon.ico" type="image/x-icon">
   <link href="css/materialicons.css" rel="stylesheet">
+  <link href="css/layout.css" rel="stylesheet">
+  <link href="css/index.css" rel="stylesheet">
   <title>Historify</title>
-  <style>
-    @media (max-width: 1150px) {
-      .side-button div {
-        display: none;
-      }
-      .button .side-button {
-        justify-content: center;
-        padding-left: 0;
-        margin-left: 0 auto;
-        border-left-style: hidden;
-      }
-
-      .button .side-button:hover {
-        border-left-style: hidden;
-      }
-      .active {
-        border-left-style: hidden;
-      }
-      .active:hover {
-        border-left-style: hidden;
-      }
-    }
-
-
-
-
-    html {
-      overflow-y: scroll;
-    }
-
-    * {
-      box-sizing: border-box;
-    }
-
-    body {
-      display: flex;
-      min-height: 100vh;
-      flex-direction: column;
-      margin: 0;
-      font: message-box;
-      color: rgb(92, 92, 92);
-      background-color: #f9f9f9;
-      font-size: 13px;
-      line-height: 20px;
-    }
-
-    #main {
-      display: flex;
-      flex: 1;
-    }
-
-    #main>#items {
-      flex: 1;
-    }
-
-    #main>nav {
-      overflow: hidden;
-      flex: 0 0 14.25vw;
-      order: -1;
-    }
-
-    .nav-wrapper {
-      flex-shrink: 0;
-      position: fixed;
-      height: 100%;
-      width: 14.25vw;
-      background-color: #424f5a;
-    }
-
-    i {
-      color: white;
-    }
-
-    #items {
-      margin-top: 31.4px;
-      padding-top: 0;
-      padding-left: 1em;
-      padding-right: 1em;
-      padding-bottom: 1em;
-    }
-
-    #items {
-      display: flex;
-      align-items: center;
-      justify-content: center;
-      flex-wrap: wrap;
-    }
-
-    .page a,
-    a:active,
-    a:focus {
-      outline: none;
-      text-decoration: none !important;
-      color: #37474f;
-      height: 44.5px;
-      min-height: 44.5px;
-    }
-
-    div.page {
-      overflow: hidden;
-      background-color: #eeeeee;
-      margin: 9px;
-      border: 1px solid #ccc;
-      width: 292px;
-      min-width: 292px;
-      height: 211.5;
-      min-height: 211.5;
-      border-radius: 10px;
-      margin-bottom: 22px;
-      box-shadow: 0 1px 1px 0 rgba(0, 0, 0, 0.05), 0 1px 1px 0 rgba(0, 0, 0, 0.05);
-    }
-
-    div.page:hover {
-      box-shadow: 0px 0px 1px 1px rgb(2, 117, 216);
-      background-color: #5c5c5c;
-      border: 1px solid rgb(2, 117, 216);
-    }
-
-    div.page:hover .desc {
-      color: white;
-    }
-
-
-    div.page img {
-      object-position: 0 0;
-      z-index: -1000;
-      object-fit: cover;
-      width: 290px;
-      min-width: 290px;
-      max-width: 290px;
-      height: 180px;
-      min-height: 180px;
-      max-height: 180px;
-      border-radius: 10px 10px 0px 0px;
-    }
-
-    div.desc {
-      height: 25px;
-      min-height: 25px;
-      max-height: 25px;
-      width: 290px;
-      min-width: 290px;
-      max-width: 290px;
-      text-align: center;
-      padding-left: 5px;
-      padding-right: 5px;
-    }
-
-    .overlay {
-      position: absolute;
-      display: block;
-      z-index: 2;
-      cursor: default;
-      height: 90%;
-      width: 80vw;
-      background-color: #f9f9f9;
-    }
-
-    #loader {
-      position: absolute;
-      top: 50%;
-      left: 50%;
-      margin-top: -114.9px;
-      margin-left: -83.5px;
-      -webkit-user-select: none;
-      -moz-user-select: none;
-      -ms-user-select: none;
-      user-select: none;
-      cursor: default;
-      pointer-events:none;
-    }
-
-
-    .side-button,
-    .nav-wrapper a {
-      outline: none;
-      text-decoration: none !important;
-      font-size: 15px;
-      cursor: default;
-    }
-
-    .side-button {
-      width: 100%;
-      height: 39.4px;
-      display: flex;
-      align-items: center;
-      padding-left: 5%;
-      color: #c1c1c1;
-      border-left: solid 4px #424f5a;
-    }
-
-    .side-button div {
-      padding-left: 3.5%;
-    }
-
-    .side-button:hover {
-      background-color: #5e6972;
-      border-left: solid 4px #5e6972;
-    }
-
-    .active {
-      border-left: solid 4px #ff9500;
-      background-color: #343f48;
-      color: white;
-    }
-
-    .active:hover {
-      background-color: #1a2533;
-      border-left: solid 4px #ff9500;
-    }
-
-    #loader {
-      -webkit-animation: spin 1.2s linear infinite;
-      -moz-animation: spin 1.2s linear infinite;
-      animation: spin 1.2s linear infinite;
-    }
-
-    @-moz-keyframes spin {
-      100% {
-        -moz-transform: rotate(360deg);
-      }
-    }
-
-    @-webkit-keyframes spin {
-      100% {
-        -webkit-transform: rotate(360deg);
-      }
-    }
-
-    @keyframes spin {
-      100% {
-        -webkit-transform: rotate(360deg);
-        transform: rotate(360deg);
-      }
-    }
-
-    #alert{
-      font-size: 150px;
-      color: rgba(200, 200, 200, 0.3);
-      margin-top: -120px;
-      margin-left: -75px;
-      position: absolute;
-      top: 50%;
-      left: 50%;
-      -webkit-user-select: none;
-      -moz-user-select: none;
-      -ms-user-select: none;
-      user-select: none;
-      cursor: default;
-      pointer-events:none;
-    }
-
-    #alert-text{
-      font-size: 20px;
-      color: rgba(200, 200, 200, 0.3);
-      margin-top: 50px;
-      margin-left: -122px;
-      position: absolute;
-      top: 50%;
-      left: 50%;
-      -webkit-user-select: none;
-      -moz-user-select: none;
-      -ms-user-select: none;
-      user-select: none;
-      cursor: default;
-      pointer-events:none;
-    }
-
-    @media (max-width: 392px) {
-      div.page {
-        width: 200px;
-        min-width: 200px;
-        height: 211.5;
-        min-height: 211.5;
-      }
-      div.desc {
-        width: 200px;
-        min-width: 200px;
-        max-width: 200px;
-      }
-
-      #alert-text{
-        display: none;
-      }
-
-      nav{
-        z-index: 99999;
-      }
-    }
-
-    @media (max-width: 283px) {
-      div.page {
-        width: 160px;
-        min-width: 160px;
-        height: 211.5;
-        min-height: 211.5;
-      }
-
-      div.desc {
-        width: 160px;
-        min-width: 160px;
-        max-width: 160px;
-      }
-
-    }
-
-    @media (max-width: 242px) {
-      div.page {
-        width: 130px;
-        min-width: 130px;
-        height: 211.5;
-        min-height: 211.5;
-      }
-
-      div.desc {
-        width: 130px;
-        min-width: 130px;
-        max-width: 130px;
-      }
-
-    }
-  </style>
 </head>
 
 <body>
