--- a/history_ui/faq.html
+++ b/history_ui/faq.html
@@ -5,171 +5,9 @@
   <link rel="shortcut icon" href="../icons/favicon.ico" type="image/x-icon">
   <link rel="icon" href="../icons/favicon.ico" type="image/x-icon">
   <link href="css/materialicons.css" rel="stylesheet">
+  <link href="css/layout.css" rel="stylesheet">
+  <link href="css/faq.css" rel="stylesheet">
   <title>Historify</title>
-  <style>
-    @media (max-width: 1150px) {
-      .side-button div {
-        display: none;
-      }
-      .button .side-button {
-        justify-content: center;
-        padding-left: 0;
-        margin-left: 0 auto;
-        border-left-style: hidden;
-      }
-
-      .button .side-button:hover {
-        border-left-style: hidden;
-      }
-      .active {
-        border-left-style: hidden;
-      }
-      .active:hover {
-        border-left-style: hidden;
-      }
-    }
-
-
-    html {
-      overflow-y: scroll;
-    }
-
-    * {
-      box-sizing: border-box;
-    }
-
-    body {
-      display: flex;
-      min-height: 100vh;
-      flex-direction: column;
-      margin: 0;
-      font: message-box;
-      color: rgb(92, 92, 92);
-      background-color: #f9f9f9;
-      font-size: 13px;
-      line-height: 20px;
-    }
-
-    #main {
-      display: flex;
-      flex: 1;
-      margin-bottom: 100px;
-    }
-
-    #main>nav {
-      overflow: hidden;
-      flex: 0 0 14.25vw;
-      order: -1;
-    }
-
-    .nav-wrapper {
-      flex-shrink: 0;
-      position: fixed;
-      height: 100%;
-      width: 14.25vw;
-      background-color: #424f5a;
-    }
-
-    .container {
-      display: flex;
-      width: 100%;
-      height: 100%;
-      flex-direction: column;
-      line-height: 200%;
-      margin-left: 20%;
-      margin-right: 20%;
-      margin-top: 75px;
-    }
-
-    h3 {
-      margin-bottom: 0px;
-      margin-top: 0px;
-      font-weight: 600;
-      font-size: 20px;
-      color: #424e5a;
-    }
-
-    p {
-      margin-top: 0px;
-      margin-bottom: 35px;
-      font-size: 16px;
-    }
-
-    i {
-      color: white;
-    }
-
-    .page a,
-    a:active,
-    a:focus {
-      outline: none;
-      text-decoration: none !important;
-      color: #37474f;
-      height: 44.5px;
-      min-height: 44.5px;
-    }
-
-    .side-button,
-    .nav-wrapper a {
-      outline: none;
-      text-decoration: none !important;
-      font-size: 15px;
-      cursor: default;
-    }
-
-    .side-button {
-      width: 100%;
-      height: 39.4px;
-      display: flex;
-      align-items: center;
-      padding-left: 5%;
-      color: #c1c1c1;
-      border-left: solid 4px #424f5a;
-    }
-
-    .side-button div {
-      padding-left: 3.5%;
-    }
-
-    .side-button:hover {
-      background-color: #5e6972;
-      border-left: solid 4px #5e6972;
-    }
-
-    .active {
-      border-left: solid 4px #ff9500;
-      background-color: #343f48;
-      color: white;
-    }
-
-    .active:hover {
-      background-color: #1a2533;
-      border-left: solid 4px #ff9500;
-    }
-
-    h1 {
-      font-size: 35px;
-      font-weight: 400;
-      margin-top: 0;
-      color: #333333;
-    }
-
-    hr {
-      border-top: 1px solid rgba(200, 200, 200, 0.01);
-      border-left: 0px;
-      border-right: 0px;
-      width: 100%;
-      margin-top: 0;
-      margin-bottom: 18px;
-    }
-
-    @media (max-width: 466px) {
-      .container {
-        margin-left: 20px;
-        margin-right: 20px;
-      }
-    }
-  </style>
 </head>
 
 <body>
@@ -235,4 +73,3 @@
 </body>
 
 </html>
-
