--- a/history_ui/settings.html
+++ b/history_ui/settings.html
@@ -5,348 +5,9 @@
   <link rel="shortcut icon" href="../icons/favicon.ico" type="image/x-icon">
   <link rel="icon" href="../icons/favicon.ico" type="image/x-icon">
   <link href="css/materialicons.css" rel="stylesheet">
+  <link href="css/layout.css" rel="stylesheet">
+  <link href="css/settings.css" rel="stylesheet">
   <title>Historify</title>
-  <style>
-    @media (max-width: 1150px) {
-      .side-button div {
-        display: none;
-      }
-      .button .side-button {
-        justify-content: center;
-        padding-left: 0;
-        margin-left: 0 auto;
-        border-left-style: hidden;
-      }
-
-      .button .side-button:hover {
-        border-left-style: hidden;
-      }
-      .active {
-        border-left-style: hidden;
-      }
-      .active:hover {
-        border-left-style: hidden;
-      }
-    }
-
-
-    html {
-      overflow-y: scroll;
-    }
-
-    * {
-      box-sizing: border-box;
-    }
-
-    body {
-      display: flex;
-      min-height: 100vh;
-      flex-direction: column;
-      margin: 0;
-      font: message-box;
-      color: rgb(92, 92, 92);
-      background-color: #f9f9f9;
-      font-size: 13px;
-      line-height: 20px;
-    }
-
-    #main {
-      display: flex;
-      flex: 1;
-      margin-bottom: 100px;
-    }
-
-    #main>nav {
-      overflow: hidden;
-      flex: 0 0 14.25vw;
-      order: -1;
-    }
-
-    .nav-wrapper {
-      flex-shrink: 0;
-      position: fixed;
-      height: 100%;
-      width: 14.25vw;
-      background-color: #424f5a;
-    }
-
-    .container {
-      display: flex;
-      width: 100%;
-      height: 90%;
-      flex-direction: column;
-      line-height: 200%;
-      margin-left: 20%;
-      margin-right: 20%;
-      margin-top: 115px;
-    }
-
-    h3 {
-      margin-bottom: 0px;
-      margin-top: 0px;
-      font-weight: 600;
-      font-size: 20px;
-      color: #424e5a;
-    }
-
-    p {
-      margin-top: 0px;
-      margin-bottom: 35px;
-      font-size: 16px;
-    }
-
-    i {
-      color: white;
-    }
-
-    .page a,
-    a:active,
-    a:focus {
-      outline: none;
-      text-decoration: none !important;
-      color: #37474f;
-      height: 44.5px;
-      min-height: 44.5px;
-    }
-
-    .side-button,
-    .nav-wrapper a {
-      outline: none;
-      text-decoration: none !important;
-      font-size: 15px;
-      cursor: default;
-    }
-
-    .side-button {
-      width: 100%;
-      height: 39.4px;
-      display: flex;
-      align-items: center;
-      padding-left: 5%;
-      color: #c1c1c1;
-      border-left: solid 4px #424f5a;
-    }
-
-    .side-button div {
-      padding-left: 3.5%;
-    }
-
-    .side-button:hover {
-      background-color: #5e6972;
-      border-left: solid 4px #5e6972;
-    }
-
-    .active {
-      border-left: solid 4px #ff9500;
-      background-color: #343f48;
-      color: white;
-    }
-
-    .active:hover {
-      background-color: #1a2533;
-      border-left: solid 4px #ff9500;
-    }
-
-    h1 {
-      font-size: 35px;
-      font-weight: 400;
-      margin-top: 0;
-      color: #333333;
-    }
-
-    hr {
-      border-top: 1px solid rgba(200, 200, 200, 0.01);
-      border-left: 0px;
-      border-right: 0px;
-      width: 100%;
-      margin-top: 0;
-      margin-bottom: 18px;
-    }
-
-
-    .control {
-      font-size: 17px;
-      position: relative;
-      display: block;
-      margin-bottom: 15px;
-      padding-left: 30px;
-      cursor: default;
-      color: #424e5a;
-      margin-left: 4px;
-    }
-
-    .control input {
-      position: absolute;
-      z-index: -1;
-      opacity: 0;
-    }
-
-    .control__indicator {
-      position: absolute;
-      top: 2px;
-      left: 0;
-      width: 23px;
-      height: 23px;
-      background: #fefefe;
-      border: 1px solid #c1c1c1;
-      border-radius: 2px;
-    }
-    /*Top border of the checkbox*/
-
-    .control__indicator:before {
-      position: absolute;
-      display: block;
-      content: '';
-      border-top: 2px solid #f7f7f7;
-      height: 100%;
-      width: 100%;
-      box-sizing: border-box;
-      border-radius: 1px;
-    }
-
-    .control--radio .control__indicator {
-      border-radius: 50%;
-    }
-    /* Hover and focus states */
-
-    .control:hover input~.control__indicator,
-    .control input:focus~.control__indicator {
-      border: 1px solid #0095dd;
-    }
-    /* Check mark */
-
-    .control__indicator:after {
-      position: absolute;
-      display: none;
-      content: '';
-    }
-    /* Show check mark */
-
-    .control input:checked~.control__indicator:after {
-      display: block;
-    }
-    /* Checkbox tick */
-
-    .control--checkbox .control__indicator:after {
-      width: inherit;
-      height: inherit;
-      background-image: url("img/check.png");
-      background-repeat: no-repeat;
-      overflow: hidden;
-    }
-    /* Radio button inner circle */
-
-    .control--radio .control__indicator:after {
-      top: 7px;
-      left: 7px;
-      width: 6px;
-      height: 6px;
-      border-radius: 50%;
-      background: #fff;
-    }
-
-
-
-
-    .select-style {
-      padding: 0;
-      margin: 0;
-      border: 1px solid #c1c1c1;
-      width: 130px;
-      border-radius: 2px;
-      overflow: hidden;
-      background-color: #fbfbfb;
-    }
-
-    .select-style:hover {
-      background-color: #ebebeb;
-    }
-
-    .select-style select {
-      padding: 5px 8px;
-      width: 100%;
-      border: none;
-      box-shadow: none;
-      background-color: transparent;
-      background-image: none;
-      -webkit-appearance: none;
-      -moz-appearance: none;
-      appearance: none;
-      background: url(img/arrow.png) no-repeat right;
-      font-size: 14px;
-      color: #333333;
-    }
-
-    .select-style select:focus {
-      outline: none;
-    }
-
-    .select-wrapper {
-      flex-direction: row;
-      display: flex;
-      flex-wrap: wrap;
-      margin-left: 4px;
-      margin-top: 7px;
-    }
-
-    .select-desc {
-      font-size: 17px;
-      color: #424e5a;
-      width: 164px;
-    }
-
-    br {
-      display: block;
-      margin: 7px 0;
-    }
-
-    input[type=number] {
-      color: #333333;
-      width: 130px;
-      border-radius: 2px;
-      border: 1px solid #c1c1c1;
-      padding: 5px 8px;
-      font-size: 14px;
-      padding-left: 12px;
-      background-color: #fbfbfb;
-    }
-
-    input[type=number]:focus {
-      border: 1px solid #0095dd;
-    }
-
-
-    #delete {
-      padding: 5px;
-      margin: 0;
-      border: 1px solid #c1c1c1;
-      width: 125px;
-      border-radius: 2px;
-      overflow: hidden;
-      background-color: #fbfbfb;
-      color: #333333;
-      text-align: center;
-      text-decoration: none;
-      display: inline-block;
-      font-size: 14px;
-      cursor: default;
-    }
-
-    #delete:hover {
-      background-color: #ebebeb;
-    }
-
-    #delete:active {
-      background-color: #dadada;
-    }
-
-    @media (max-width: 466px) {
-      .container {
-        margin-left: 20px;
-        margin-right: 20px;
-      }
-    }
-  </style>
 </head>
 
 <body>
