--- a/history_ui/index.html
+++ b/history_ui/index.html
@@ -1,7 +1,9 @@
+<!DOCTYPE html>
 <html>
 
 <head>
   <meta name="viewport" content="width=device-width,initial-scale=1.0">
+  <meta charset="utf-8" />
   <link rel="shortcut icon" href="../icons/favicon.ico" type="image/x-icon">
   <link rel="icon" href="../icons/favicon.ico" type="image/x-icon">
   <link href="css/materialicons.css" rel="stylesheet">
