--- a/history_ui/faq.html
+++ b/history_ui/faq.html
@@ -54,7 +54,7 @@
       <p>
         Since the addon only takes a screenshot and stores the website information locally after the website has fully loaded, it should not slow down the performance except you have an older device or too many pages in the history.
       </p>
-      <h3>It does not take screenshots of every page, whats the problem?</h3>
+      <h3>It does not take screenshots of every page, what's the problem?</h3>
       <p>
         The trigger to take a screenshot and store all the other data is inside a content script which always starts running when a website is loaded. Some pages dont allow content scripts to run on their page e.g. <a href="https://addons.mozilla.org">addons.mozilla.org</a>,
         since this could lead to a security issue. I am currently working on a new way to take screenshots so that it will even work on these pages.
