Add missing translations for the screenshot quality settings

--- a/history_ui/settings.html
+++ b/history_ui/settings.html
@@ -56,9 +56,9 @@
           <div class="select-desc i18n-ui" data-i18n="settings.form3">Screenshot quality:</div>
           <div class="select-style">
             <select id="screenshots_quality" style="width:130px;">
-            <option value="low">Low</option>
-            <option value="medium">Medium</option>
-            <option value="high">High</option>
+            <option value="low" class="i18n-ui" data-i18n="settings.form3option1">Low</option>
+            <option value="medium" class="i18n-ui" data-i18n="settings.form3option2">Medium</option>
+            <option value="high" class="i18n-ui" data-i18n="settings.form3option3">High</option>
           </select>
           </div>
 
