Add dropdown for switching lanugages

--- a/history_ui/settings.html
+++ b/history_ui/settings.html
@@ -53,18 +53,26 @@
 	      </label>
         <br>
         <div class="select-wrapper">
-          <div class="select-desc i18n-ui" data-i18n="settings.form3">Screenshot quality:</div>
+          <div class="select-desc i18n-ui" data-i18n="settings.form3">Language:</div>
           <div class="select-style">
-            <select id="screenshots_quality" style="width:130px;">
-            <option value="low" class="i18n-ui" data-i18n="settings.form3option1">Low</option>
-            <option value="medium" class="i18n-ui" data-i18n="settings.form3option2">Medium</option>
-            <option value="high" class="i18n-ui" data-i18n="settings.form3option3">High</option>
+            <select id="language" style="width:130px;">
+            <option value="en" class="i18n-ui" data-i18n="settings.form3option1">English</option>
+            <option value="de" class="i18n-ui" data-i18n="settings.form3option2">German</option>
           </select>
           </div>
-
         </div>
         <div class="select-wrapper">
-          <div class="select-desc i18n-ui" data-i18n="settings.form4">Autoclean at (in MB):</div>
+          <div class="select-desc i18n-ui" data-i18n="settings.form4">Screenshot quality:</div>
+          <div class="select-style">
+            <select id="screenshots_quality" style="width:130px;">
+            <option value="low" class="i18n-ui" data-i18n="settings.form4option1">Low</option>
+            <option value="medium" class="i18n-ui" data-i18n="settings.form4option2">Medium</option>
+            <option value="high" class="i18n-ui" data-i18n="settings.form4option3">High</option>
+          </select>
+          </div>
+        </div>
+        <div class="select-wrapper">
+          <div class="select-desc i18n-ui" data-i18n="settings.form5">Autoclean at (in MB):</div>
           <input id="autoclean_at" type="number" name="autoclean_at">
         </div>
 
