Add more languages

--- a/history_ui/faq.html
+++ b/history_ui/faq.html
@@ -22,13 +22,13 @@
         <a href="index.html" class="button">
           <div class="side-button">
             <i class="material-icons">access_time</i>
-            <div class="i18n-ui" data-i18n="nav.tab1">View my history</div>
+            <div class="i18n-ui" data-i18n="nav.tab1">My browsing history</div>
           </div>
         </a>
         <a href="#" class="button">
           <div class="side-button active">
             <i class="material-icons">forum</i>
-            <div class="i18n-ui" data-i18n="nav.tab2">Read the FAQ's</div>
+            <div class="i18n-ui" data-i18n="nav.tab2">Frequently asked questions</div>
           </div>
         </a>
         <a href="settings.html" class="button">
@@ -40,7 +40,7 @@
       </div>
     </nav>
     <div class="container">
-      <h1 class="i18n-ui" data-i18n="faq.title">FAQ's</h1>
+      <h1 class="i18n-ui" data-i18n="faq.title">Frequently asked questions</h1>
       <hr>
       <h3 class="i18n-ui" data-i18n="faq.question1">Will the screenshots eat up my hard drive space?</h3>
       <p class="i18n-ui" data-i18n="faq.answer1">Good question! Every screenshot gets compressed to reduce their cost of storage. Even though one screenshot might not need that much space, thousands for example will require much more space in comparison to one. Thousands of screenshots would probably
