--- a/history_ui/index.html
+++ b/history_ui/index.html
@@ -22,13 +22,13 @@
         <a href="#" class="button">
           <div class="side-button active">
             <i class="material-icons">access_time</i>
-            <div class="i18n-ui" data-i18n="nav.tab1">View my history</div>
+            <div class="i18n-ui" data-i18n="nav.tab1">My browsing history</div>
           </div>
         </a>
         <a href="faq.html" class="button">
           <div class="side-button">
             <i class="material-icons">forum</i>
-            <div class="i18n-ui" data-i18n="nav.tab2">Read the FAQ's</div>
+            <div class="i18n-ui" data-i18n="nav.tab2">Frequently asked questions</div>
           </div>
         </a>
         <a href="settings.html" class="button">
