--- a/history_ui/settings.html
+++ b/history_ui/settings.html
@@ -22,13 +22,13 @@
         <a href="index.html" class="button">
           <div class="side-button">
             <i class="material-icons">access_time</i>
-            <div class="i18n-ui" data-i18n="nav.tab1">View my history</div>
+            <div class="i18n-ui" data-i18n="nav.tab1">My browsing history</div>
           </div>
         </a>
         <a href="faq.html" class="button">
           <div class="side-button">
             <i class="material-icons">forum</i>
-            <div class="i18n-ui" data-i18n="nav.tab2">Read the FAQ's</div>
+            <div class="i18n-ui" data-i18n="nav.tab2">Frequently asked questions</div>
           </div>
         </a>
         <a href="#" class="button">
@@ -53,21 +53,26 @@
 	      </label>
         <br>
         <div class="select-wrapper">
-          <div class="select-desc i18n-ui" data-i18n="settings.form3">Language:</div>
+          <div class="select-desc i18n-ui" data-i18n="settings.form3.title">Language:</div>
           <div class="select-style">
             <select id="language" style="width:130px;">
-            <option value="en" class="i18n-ui" data-i18n="settings.form3option1">English</option>
-            <option value="de" class="i18n-ui" data-i18n="settings.form3option2">German</option>
+            <option value="en" class="i18n-ui" data-i18n="settings.form3.option1">English</option>
+            <option value="de" class="i18n-ui" data-i18n="settings.form3.option2">German</option>
+            <option value="es" class="i18n-ui" data-i18n="settings.form3.option3">Spanish</option>
+            <option value="fr" class="i18n-ui" data-i18n="settings.form3.option4">French</option>
+            <option value="ja" class="i18n-ui" data-i18n="settings.form3.option5">Japanese</option>
+            <option value="pt" class="i18n-ui" data-i18n="settings.form3.option6">Portuguese</option>
+            <option value="ru" class="i18n-ui" data-i18n="settings.form3.option7">Russian</option>
           </select>
           </div>
         </div>
         <div class="select-wrapper">
-          <div class="select-desc i18n-ui" data-i18n="settings.form4">Screenshot quality:</div>
+          <div class="select-desc i18n-ui" data-i18n="settings.form4.title">Screenshot quality:</div>
           <div class="select-style">
             <select id="screenshots_quality" style="width:130px;">
-            <option value="low" class="i18n-ui" data-i18n="settings.form4option1">Low</option>
-            <option value="medium" class="i18n-ui" data-i18n="settings.form4option2">Medium</option>
-            <option value="high" class="i18n-ui" data-i18n="settings.form4option3">High</option>
+            <option value="low" class="i18n-ui" data-i18n="settings.form4.option1">Low</option>
+            <option value="medium" class="i18n-ui" data-i18n="settings.form4.option2">Medium</option>
+            <option value="high" class="i18n-ui" data-i18n="settings.form4.option1">High</option>
           </select>
           </div>
         </div>
