--- a/history_ui/settings.html
+++ b/history_ui/settings.html
@@ -66,7 +66,7 @@
           </select>
           </div>
         </div>
-        <div class="select-wrapper">
+        <div id="screenshots_quality_wrapper" class="select-wrapper">
           <div class="select-desc i18n-ui" data-i18n="settings.form4.title">Screenshot quality:</div>
           <div class="select-style">
             <select id="screenshots_quality" style="width:130px;">
@@ -76,7 +76,7 @@
           </select>
           </div>
         </div>
-        <div class="select-wrapper">
+        <div id="autoclean_at_wrapper" class="select-wrapper">
           <div class="select-desc i18n-ui" data-i18n="settings.form5">Autoclean at (in MB):</div>
           <input id="autoclean_at" type="number" name="autoclean_at">
         </div>
