Add alert message in settings

--- a/history_ui/settings.html
+++ b/history_ui/settings.html
@@ -85,6 +85,12 @@
         <button id="delete" class="i18n-ui" data-i18n="settings.button">Delete history</button>
       </div>
 
+
+      <div class="alert">
+        <b>Success!</b> Your settings have been updated.
+      </div>
+
+
     </div>
   </div>
 
