--- a/history_ui/settings.html
+++ b/history_ui/settings.html
@@ -14,6 +14,9 @@
 
 <body>
 
+  <div class="ribbon">
+    <a target="_blank" href="https://github.com/flosommerfeld/Historify">Visit on GitHub</a>
+  </div>
 
   <div id="main">
     <nav>
